# TODO: update update url info, python version
[metadata]
name = versioned-lru-cache
version = 0.0.1
author = Hristo I. Gueorguiev
author_email = hristo.gueorguiev@gmail.com
description = Simple package for a versioned lru cache function decorator
long_description = file: README.md
long_description_content_type = text/markdown
url = TDB
project_urls = 
  Bug Tracker = TDB
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent 

[options]
package_dir =
  = src
py_modules = versioned_lru_cache
python_requires = >= 3.8

[flake8]
max-line-length = 88
extend-ignore = E203
